# lcopy

./: .lcopy.yaml  README.md  pyproject.toml
.lcopy/: lcopy.lcopy_spec.yaml  lcopy.lcopy_src.yaml
.vandelay/: vandelay-py.js
docs/: sample-options.yaml
extra/lcopy_dodo_commands/: lcopy.py
spec/: options.yaml
spec/examples/: blogs.lcopy-config.yaml  options.yaml
src/lcopy/: cli.py  config.py  copier.py  options.py
src/lcopy/configs/actions/: create_target_node.py  create_target_nodes.py  parse_config_file.py  parse_target_node.py  parse_target_section.py  process_config.py
src/lcopy/configs/models/: __init__.py  config.py  config_node.py  options.py  root_config_node.py  source_config.py  target_node.py
src/lcopy/configs/rules/: get_all_labels.py  get_list_of_labels.py  resolve_includes.py  transform_targets_json.py
src/lcopy/configs/utils/: normalize_path.py  print_target_nodes.py
src/lcopy/filemaps/actions/: copy_files.py  create_filemap_node.py  purge_files.py
src/lcopy/filemaps/models/: __init__.py  filemap_node.py
src/lcopy/filemaps/rules/: filter_filenames.py
src/lcopy/files/actions/: copy_files.py  create_concatenated_output.py  purge_files.py
src/lcopy/files/rules/: get_filtered_files.py
src/lcopy/files/utils/: concat.py  normalize_path.py
src/lcopy/runtime/: __main__.py
src/lcopy/runtime/actions/: parse_options_file.py
src/lcopy/runtime/entrypoints/: lcopy.py
src/lcopy/runtime/models/: __init__.py  options.py
src/lcopy/runtime/rules/: get_ignore_patterns.py
